--- a/Breaking/app/src/main/res/layout/item_comment_list.xml
+++ b/Breaking/app/src/main/res/layout/item_comment_list.xml
@@ -17,11 +17,11 @@
             android:layout_height="0dp"
             android:layout_margin="10dp"
             android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_comment_content"
             app:layout_constraintHorizontal_bias="0.06"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_comment_content"
             app:layout_constraintWidth_percent="0.15"
             tools:srcCompat="@tools:sample/avatars" />
 
@@ -44,10 +44,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
-            android:text="코로나 사태가 아직 진정이 되지 않았는데, 다시 확산이 될까봐 무섭네요 ㅠㅠ"
-            android:textColor="@color/black"
             android:ellipsize="end"
             android:maxLines="2"
+            android:text="코로나 사태가 아직 진정이 되지 않았는데, 다시 확산이 될까봐 무섭네요 ㅠㅠ"
+            android:textColor="@color/black"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintLeft_toLeftOf="@+id/tv_comment_nickname"
             app:layout_constraintRight_toRightOf="parent"
@@ -62,7 +62,7 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintLeft_toLeftOf="@+id/tv_comment_content"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_comment_content"/>
+            app:layout_constraintTop_toBottomOf="@+id/tv_comment_content" />
 
         <TextView
             android:id="@+id/tv_post_like_count"
@@ -70,11 +70,11 @@
             android:layout_height="wrap_content"
             android:text="9,999"
             android:textColor="@color/black"
-            app:layout_constraintHorizontal_bias="0.03"
-            app:layout_constraintTop_toTopOf="@+id/ib_post_like"
             app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
+            app:layout_constraintHorizontal_bias="0.03"
             app:layout_constraintLeft_toRightOf="@+id/ib_post_like"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
 
         <TextView
             android:id="@+id/tv_post_reply"
@@ -82,36 +82,36 @@
             android:layout_height="wrap_content"
             android:text="답글"
             android:textColor="@color/black"
-            app:layout_constraintHorizontal_bias="0.13"
-            app:layout_constraintTop_toTopOf="@+id/ib_post_like"
             app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
+            app:layout_constraintHorizontal_bias="0.13"
             app:layout_constraintLeft_toRightOf="@+id/tv_post_like_count"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
 
         <ImageButton
             android:id="@+id/ib_post_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_baseline_more_horiz_24"
-            app:layout_constraintTop_toTopOf="@+id/ib_post_like"
             app:layout_constraintBottom_toBottomOf="@id/ib_post_like"
             app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintLeft_toRightOf="@id/tv_post_reply"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
 
         <TextView
             android:id="@+id/tv_post_reply_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="답글 4개"
-            android:textColor="@color/breaking_color"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/ib_post_like"
+            android:text="답글 4개"
+            android:textColor="@color/breaking_color"
             app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintVertical_bias="0.4"
             app:layout_constraintLeft_toLeftOf="@+id/ib_post_like"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ib_post_like"
+            app:layout_constraintVertical_bias="0.4" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_nested_comment_list"
@@ -119,11 +119,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="vertical"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_post_reply_count"
-            app:layout_constraintTop_toBottomOf="@+id/tv_post_reply_count"
             android:visibility="gone"
-            />
-
+            app:layout_constraintLeft_toLeftOf="@+id/tv_post_reply_count"
+            app:layout_constraintTop_toBottomOf="@+id/tv_post_reply_count" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
