--- a/Breaking/app/src/main/res/layout/activity_follow.xml
+++ b/Breaking/app/src/main/res/layout/activity_follow.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".FollowActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/following_tool_bar"
         android:layout_width="match_parent"
@@ -14,18 +15,35 @@
         android:elevation="2dp"
         app:title="팔로잉 페이지"
         app:titleTextColor="@color/black" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_following"
-            android:overScrollMode="never"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
             android:scrollbarAlwaysDrawVerticalTrack="true"
-            android:scrollbarSize="8dp"
+            android:scrollbarSize="13dp"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+        <ProgressBar
+            android:id="@+id/progressbar_loading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/breaking_color"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hashtag_bottom_divider" />
+
     </LinearLayout>
 
 </LinearLayout>
