--- a/Breaking/app/src/main/res/layout/item_post_list.xml
+++ b/Breaking/app/src/main/res/layout/item_post_list.xml
@@ -9,7 +9,8 @@
         android:id="@+id/img_btn_post_more_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_baseline_more_horiz_24"
+        android:src="@drawable/ic_baseline_more_horiz_24"
+        android:background="@drawable/image_button_click_background"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.45" />
