--- a/Breaking/app/src/main/res/layout/item_comment_list.xml
+++ b/Breaking/app/src/main/res/layout/item_comment_list.xml
@@ -1,129 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="2dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/iv_comment_profile"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/rv_nested_comment_list"
+        app:layout_constraintWidth_percent="0.13"
+        tools:srcCompat="@tools:sample/avatars" />
 
-        <ImageView
-            android:id="@+id/iv_comment_profile"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="10dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_comment_content"
-            app:layout_constraintHorizontal_bias="0.06"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.15"
-            tools:srcCompat="@tools:sample/avatars" />
+    <TextView
+        android:id="@+id/tv_comment_nickname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="만두피"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintHorizontal_bias="0.075"
+        app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_comment_profile" />
 
-        <TextView
-            android:id="@+id/tv_comment_nickname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="만두피"
-            android:textColor="@color/black"
-            android:textSize="17sp"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tv_post_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toRightOf="@+id/tv_comment_nickname"
+        app:layout_constraintTop_toTopOf="@+id/tv_comment_nickname"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_comment_nickname"/>
 
-        <TextView
-            android:id="@+id/tv_comment_content"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="10dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:text="코로나 사태가 아직 진정이 되지 않았는데, 다시 확산이 될까봐 무섭네요 ㅠㅠ"
-            android:textColor="@color/black"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_comment_nickname"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_comment_nickname" />
+    <TextView
+        android:id="@+id/tv_comment_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:text="코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 다시 확산이 될까봐 무섭네요 ㅠㅠ"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_comment_nickname"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_comment_nickname" />
 
-        <ImageButton
-            android:id="@+id/ib_post_like"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/ic_post_like"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_comment_content"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_comment_content" />
+    <ImageButton
+        android:id="@+id/ib_post_like"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.05"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_post_like"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_comment_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_comment_content" />
 
-        <TextView
-            android:id="@+id/tv_post_like_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="9,999"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
-            app:layout_constraintHorizontal_bias="0.03"
-            app:layout_constraintLeft_toRightOf="@+id/ib_post_like"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
+    <TextView
+        android:id="@+id/tv_post_like_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="9,999"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
+        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintLeft_toRightOf="@+id/ib_post_like"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
 
-        <TextView
-            android:id="@+id/tv_post_reply"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="답글"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
-            app:layout_constraintHorizontal_bias="0.13"
-            app:layout_constraintLeft_toRightOf="@+id/tv_post_like_count"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
+    <TextView
+        android:id="@+id/tv_post_reply"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="답글"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintLeft_toRightOf="@+id/tv_post_like_count"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
 
-        <ImageButton
-            android:id="@+id/ib_post_more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_baseline_more_horiz_24"
-            app:layout_constraintBottom_toBottomOf="@id/ib_post_like"
-            app:layout_constraintHorizontal_bias="0.9"
-            app:layout_constraintLeft_toRightOf="@id/tv_post_reply"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
+    <ImageButton
+        android:id="@+id/ib_post_more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_baseline_more_horiz_24"
+        app:layout_constraintBottom_toBottomOf="@id/ib_post_like"
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintLeft_toRightOf="@id/tv_post_reply"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
 
-        <TextView
-            android:id="@+id/tv_post_reply_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="15dp"
-            android:text="답글 4개"
-            android:textColor="@color/breaking_color"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintLeft_toLeftOf="@+id/ib_post_like"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ib_post_like"
-            app:layout_constraintVertical_bias="0.4" />
+    <TextView
+        android:id="@+id/tv_post_reply_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
+        android:text="답글 더보기"
+        android:textColor="@color/breaking_color"
+        android:textSize="13sp"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintLeft_toLeftOf="@+id/ib_post_like"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ib_post_like"
+        app:layout_constraintVertical_bias="0.4" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_nested_comment_list"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical"
-            android:visibility="gone"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_post_reply_count"
-            app:layout_constraintTop_toBottomOf="@+id/tv_post_reply_count" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_nested_comment_list"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_post_reply_count" />
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
