--- a/Breaking/app/src/main/res/layout/item_nested_comment_list.xml
+++ b/Breaking/app/src/main/res/layout/item_nested_comment_list.xml
@@ -1,105 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="2dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/iv_comment_profile_nested"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:layout_marginTop="10dp"
+        app:layout_constraintHorizontal_bias="0.18"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintWidth_percent="0.1"
+        app:layout_constraintHeight_percent="0.45"
+        tools:srcCompat="@tools:sample/avatars" />
 
-        <ImageView
-            android:id="@+id/iv_comment_profile"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="10dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintHorizontal_bias="0.06"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_comment_content"
-            app:layout_constraintWidth_percent="0.15"
-            tools:srcCompat="@tools:sample/avatars" />
+    <TextView
+        android:id="@+id/tv_comment_nickname_nested"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="만두피"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile_nested"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_comment_profile_nested" />
 
-        <TextView
-            android:id="@+id/tv_comment_nickname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="만두피"
-            android:textColor="@color/black"
-            android:textSize="17sp"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_comment_content"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="10dp"
-            android:text="코로나 사태가 아직 진정이 되지 않았는데, 다시 확산이 될까봐 무섭네요 ㅠㅠ"
-            android:textColor="@color/black"
-            android:ellipsize="end"
-            android:maxLines="2"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_comment_nickname"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_comment_nickname" />
-
-        <ImageButton
-            android:id="@+id/ib_post_like"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/ic_post_like"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_comment_content"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_comment_content"/>
-
-        <TextView
-            android:id="@+id/tv_post_like_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="9,999"
-            android:textColor="@color/black"
-            app:layout_constraintHorizontal_bias="0.03"
-            app:layout_constraintTop_toTopOf="@+id/ib_post_like"
-            app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
-            app:layout_constraintLeft_toRightOf="@+id/ib_post_like"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-        <TextView
-            android:id="@+id/tv_post_reply"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="답글"
-            android:textColor="@color/black"
-            app:layout_constraintHorizontal_bias="0.13"
-            app:layout_constraintTop_toTopOf="@+id/ib_post_like"
-            app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
-            app:layout_constraintLeft_toRightOf="@+id/tv_post_like_count"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-        <ImageButton
-            android:id="@+id/ib_post_more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_baseline_more_horiz_24"
-            app:layout_constraintTop_toTopOf="@+id/ib_post_like"
-            app:layout_constraintBottom_toBottomOf="@id/ib_post_like"
-            app:layout_constraintHorizontal_bias="0.9"
-            app:layout_constraintLeft_toRightOf="@id/tv_post_reply"
-            app:layout_constraintRight_toRightOf="parent" />
+    <TextView
+        android:id="@+id/tv_post_time_nested"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:textSize="10sp"
+        app:layout_constraintLeft_toRightOf="@+id/tv_comment_nickname_nested"
+        app:layout_constraintTop_toTopOf="@+id/tv_comment_nickname_nested"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_comment_nickname_nested"/>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_comment_content_nested"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="코로나 사태가 아직 진정이 되지 않았는데, 다시 확산이 될까봐 무섭네요 ㅠㅠ네요 ㅠㅠ네요코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데,  ㅠㅠ네요 ㅠㅠ네요 ㅠㅠ네요 네요 ㅠㅠ네요 ㅠㅠㅠㅠ"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        app:layout_constraintWidth_percent="0.57"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_comment_nickname_nested"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_comment_nickname_nested" />
 
-</androidx.cardview.widget.CardView>
+    <ImageButton
+        android:id="@+id/ib_post_like_nested"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.04"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_post_like"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_comment_content_nested"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_comment_content_nested"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_post_like_count_nested"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="9,999"
+        android:textColor="@color/black"
+        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintTop_toTopOf="@+id/ib_post_like_nested"
+        app:layout_constraintBottom_toBottomOf="@+id/ib_post_like_nested"
+        app:layout_constraintLeft_toRightOf="@+id/ib_post_like_nested"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_post_reply_nested"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="답글"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintTop_toTopOf="@+id/ib_post_like_nested"
+        app:layout_constraintBottom_toBottomOf="@+id/ib_post_like_nested"
+        app:layout_constraintLeft_toRightOf="@+id/tv_post_like_count_nested"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <ImageButton
+        android:id="@+id/ib_post_more_nested"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_baseline_more_horiz_24"
+        app:layout_constraintTop_toTopOf="@+id/ib_post_like_nested"
+        app:layout_constraintBottom_toBottomOf="@id/ib_post_like_nested"
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintLeft_toRightOf="@id/tv_post_reply_nested"
+        app:layout_constraintRight_toRightOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
